# TFG_VLM_Medical

./: .gitignore  README.md  pyproject.toml  setup.bat  setup.sh  setup_env.py
clinical_eval_app/: README.md  app.js  index.html  style.css
docs/: INSTRUCCIONES_TUTOR.md  limitaciones_tecnicas_vlm.md
notebooks/: 01_eda_polypsegm.ipynb  02_zeroshot_analysis.ipynb  03_ground_truth_bboxes.ipynb  04_export_clinical_eval_app.ipynb  05_polyp_classification_classic.ipynb  07_dual_validation_apps.ipynb
src/inference/: schemas.py  vlm_runner.py
src/preprocessing/: export_clinical_eval_data.py  extract_gt_bboxes.py  mask_generation.py  polyp_benchmark_utils.py  polyp_classification_benchmark_utils.py  polyp_segmentation_benchmark_utils.py  (+2 more)
tests/: test_ab_experiment_ui.py  test_app_config.py  test_batch_runner.py  test_experiment_ab_text.py  test_grounding_live_heatmap.py  test_grounding_report_iou_metrics.py  test_grounding_report_proximity_metrics.py  test_grounding_runner_core.py  test_inference_script.py  test_inspect_lmstudio_response.py  test_lms_download_manager.py  test_lms_menu_helpers.py  test_lms_models.py  test_manifest_iterations.py  test_markdown_report.py  test_menu_kit.py  test_metrics.py  test_poc_bbox.py  test_prepare_dual_validation.py  test_preprocess.py  test_progress_bar.py  test_proximity_metrics.py  test_schemas.py  test_setup_diagnostics.py  test_setup_env_menu.py  test_setup_extracted_menus.py  test_setup_install_flow.py  test_setup_menu_engine.py  test_setup_models_ui.py  test_setup_ui_io_render.py  test_telemetry.py  test_vlm_runner.py
(+65 files in other folders)
