[project]
name = "tfg-vlm-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "tqdm>=4.67.3",
]
